...
                            <constraint firstItem="I88-2g-25a" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="dNT-3h-I1e"/>
                            <constraint firstAttribute="bottom" secondItem="I88-2g-25a" secondAttribute="bottom" id="dWj-hJ-bFS"/>
                            <constraint firstItem="I88-2g-25a" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="sHN-jd-td3"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="課題" id="VaN-su-JvD">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="FFI-ee-rVH">
                            <connections>
                                <action selector="addButtonAction:" destination="BYZ-38-t0r" id="efa-BV-Twp"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
